--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@ body.colors-custom,
 
 		
 		<div class="site-branding-text">
-							<p class="site-title"><a href="http://panacerium.com/" rel="home">Panacerium®</a></p>
+							<p class="site-title"><a href="http://panacerium.com/" rel="home">МНТ</a></p>
 			
 							<p class="site-description">Panacerium® (ПанаЦерий) – ранозаживляющее средство для кожи. Действующее вещество – органо-неорганический комплекс оксида церия, интегрированный в биополимерную гелевую основу. </p>
 					</div><!-- .site-branding-text -->
