--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ body.colors-custom,
 		<div class="site-branding-text">
 							<p class="site-title"><a href="http://panacerium.com/" rel="home">МНТ</a></p>
 			
-							<p class="site-description">Panacerium® (ПанаЦерий) – ранозаживляющее средство для кожи. Действующее вещество – органо-неорганический комплекс оксида церия, интегрированный в биополимерную гелевую основу. </p>
+							<p class="site-description">ООО "МНТ" - производит разработку биологических протезов нового поколения </p>
 					</div><!-- .site-branding-text -->
 
 		
