--- a/index.html
+++ b/index.html
@@ -638,9 +638,9 @@ body.colors-custom,
 
 		
 		<div class="site-branding-text">
-							<p class="site-title"><a href="http://panacerium.com/" rel="home">МНТ</a></p>
+							<p class="site-title"><a href="http://panacerium.com/" rel="home">ООО "МНТ" - производит разработку биологических протезов нового поколения</a></p>
 			
-							<p class="site-description">ООО "МНТ" - производит разработку биологических протезов нового поколения </p>
+							<!-- <p class="site-description">ООО "МНТ" - производит разработку биологических протезов нового поколения </p> -->
 					</div><!-- .site-branding-text -->
 
 		
